--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -1,12 +1,54 @@
-header{
+header {
   width: 100%;
-  height: 80px;
-  border: 1px solid blueviolet;
-  nav{
+  padding: 1rem 0;
+  box-shadow: 2px 2px 9px 7px rgba(37, 37, 37, 0.753);
+  background-color: rgba(37, 37, 37, 0.753);
+
+  nav {
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
+  
+    .nav-left_content{
+      display: flex;
+      align-items: center;
+
+      .basket {
+        .like-text{
+          color: white;
+        }
+        &:hover .material-icons-outlined.like {
+            color: rgb(245, 57, 57);
+        }
+        .material-icons-outlined.like {
+          color: white;
+          font-family: "Material Icons";
+          font-size: 22px;
+        }
+      }
+      
+      .login-btn{
+        margin-left: 20px;
+        display: flex;
+        align-items: center;
+        border: none;
+        outline: none;
+        background-color: rgba(0, 0, 0, 0);
+        .material-icons-outlined.login{
+          color: white;
+          font-family: 'Material Icons';
+          font-size: 22px;
+          &:hover{
+            color: silver;
+          }
+        }
+        span{
+          color: white;
+        }
+      }
+    }
+    }
+
 }
