--- a/client/src/pages/main.scss
+++ b/client/src/pages/main.scss
@@ -2,11 +2,12 @@
   padding: 1rem;
   display: flex;
   justify-content: space-between;
-  .main-game_screenshot{
+  .main-game_screenshot {
     width: 100%;
-    .main_game-image{
+    .main_game-image {
       width: 98%;
       height: 95%;
+      position: relative;
     }
     .main_nav-game {
       width: 50%;
@@ -15,95 +16,122 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
-  }
+    }
+    .active_nav-game {
+      background-color: red;
+    }
 
-
-      span {
-        width: 3rem;
-        height: .5rem;
-        display: inline;
-        border-radius: 20px;
-        background-color: rgba(192, 192, 192, .6);
-        cursor: pointer;
-        &:hover{
-          background-color: rgb(192, 192, 192);
-        }
+    span {
+      width: 3rem;
+      height: 0.5rem;
+      display: inline;
+      border-radius: 20px;
+      background-color: rgba(192, 192, 192, 0.6);
+      cursor: pointer;
+      &:hover {
+        background-color: rgb(192, 192, 192);
       }
+    }
   }
-  .small-screen{
+  .small-screen {
     max-width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     background-color: rgba(158, 93, 148, 0.233);
     border-radius: 1rem;
-    ul{
+    ul {
       width: 100%;
 
-      h3{
+      h3 {
         max-width: 14rem;
         margin-bottom: 1rem;
-        padding: .5rem .1rem;
+        padding: 0.5rem 0.6rem;
         color: #e7e7e7;
         letter-spacing: 0.25rem;
         text-align: center;
         text-transform: uppercase;
         font-size: 1rem;
         background-color: rgba(65, 65, 65, 0.253);
-        border-radius: .5rem;
+        border-radius: 0.5rem;
       }
-      li{
+      li {
         width: 100%;
-        margin-bottom: .5rem;
+        margin-bottom: 0.5rem;
       }
     }
-      // link about game
-  .main_control-card {
-    display: flex;
-    justify-content: space-between;
-    .main-about_game {
-      display: block;
-      padding: 0.75rem .7rem;
-      border-radius: 1rem;
-      color: rgb(209, 209, 209);
-      text-transform: uppercase;
-      font-size: 0.8rem;
-      letter-spacing: 0.15rem;
-      transition: all 0.3s;
-      position: relative;
-      z-index: 1;
-      text-align: center;
-      &:after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgb(180, 147, 0);
+    // link about game
+    .main_control-card {
+      display: flex;
+      justify-content: space-between;
+      .main-about_game {
+        display: block;
+        padding: 0.75rem 0.7rem;
         border-radius: 1rem;
-        z-index: -2;
-      }
-      &:before {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 0%;
-        height: 100%;
-        background-color: darken(rgba(180, 147, 0, 0.342), 15%);
+        color: rgb(209, 209, 209);
+        text-transform: uppercase;
+        font-size: 0.8rem;
+        letter-spacing: 0.15rem;
         transition: all 0.3s;
-        border-radius: 1rem;
-        z-index: -1;
-      }
-      &:hover {
-        color: #fff;
-        &:before {
+        position: relative;
+        z-index: 1;
+        text-align: center;
+        &:after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 0;
           width: 100%;
+          height: 100%;
+          background-color: rgb(180, 147, 0);
+          border-radius: 1rem;
+          z-index: -2;
+        }
+        &:before {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 0%;
+          height: 100%;
+          background-color: darken(rgba(180, 147, 0, 0.342), 15%);
+          transition: all 0.3s;
+          border-radius: 1rem;
+          z-index: -1;
+        }
+        &:hover {
+          color: #fff;
+          &:before {
+            width: 100%;
+          }
         }
       }
     }
   }
+}
+.genres {
+  padding: 1rem;
+  display: grid;
+  // grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1vw;
+  .genre{
+    width: 100%;
+    height: 2rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 10px;
+    letter-spacing: 0.25rem;
+    text-transform: uppercase;
+    text-align: center;
+    color: #e7e7e7;
+    background-color: rgba(65, 65, 65, 0.253);
+    &:hover{
+      background-color: rgba(65, 65, 65);
+    }
   }
 
 }
