--- a/client/src/pages/about-game.scss
+++ b/client/src/pages/about-game.scss
@@ -1,13 +1,32 @@
+.background-game{
+  position: absolute;
+  top: 0;
+  left: -20px;
+  width: 100%;
+  height: 100%;
+  filter: blur(75px);
+  z-index: -1;
+}
 .about-game{
+  padding: .5rem 5px;
   &_basic-info{
     display: flex;
     &_main-screen{
-      width: 40%;
-      height: 40rem;
+      width: 264px;
+      // height: 352px;
       position: relative;
     }
-    &_info-game{
-      text-align: center;
+    .info-game{
+      padding: 0 5rem;
+      ul{
+        li{
+          .summary{
+            width: 300px;
+            color: white;
+          }
+        }
+      }
+
     }
   }
   .screenshots-game{
@@ -19,6 +38,7 @@
       li{
         width: 200px;
         height: 100%;
+
       }
     }
   }
