--- a/client/src/pages/main.scss
+++ b/client/src/pages/main.scss
@@ -109,29 +109,73 @@
     }
   }
 }
-.genres {
-  padding: 1rem;
-  display: grid;
-  // grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1vw;
-  .genre{
-    width: 100%;
-    height: 2rem;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    border-radius: 10px;
+.genres,
+.themes,
+.platforms {
+  h3 {
+    color: white;
+    font-size: 30px;
     letter-spacing: 0.25rem;
     text-transform: uppercase;
     text-align: center;
-    color: #e7e7e7;
-    background-color: rgba(65, 65, 65, 0.253);
-    &:hover{
-      background-color: rgba(65, 65, 65);
-    }
+    
+    background-color: rgba(65, 65, 65, 0.562)
   }
 
+
+    a{
+      display: flex;
+      justify-content: center;
+      padding: 1rem 0;
+
+      &:hover{
+        background-color: rgb(65, 65, 65)
+      }
+      span{
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        letter-spacing: 0.25rem;
+        text-transform: uppercase;
+        color: #e7e7e7;
+        text-align: center;
+
+
+      }
+      
+      
+
+    }
+
+
+  .genres-container,
+  .themes-container,
+  .platforms-container {
+    padding: 1rem;
+    display: grid;
+    // grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1vw;
+
+    .genre,
+    .theme,
+    .platform {
+      width: 100%;
+      height: 2rem;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      border-radius: 10px;
+      letter-spacing: 0.25rem;
+      text-transform: uppercase;
+      text-align: center;
+      color: #e7e7e7;
+      background-color: rgba(65, 65, 65, 0.253);
+      &:hover {
+        background-color: rgba(65, 65, 65);
+      }
+    }
+  }
 }
