feat & refactor: fixed paginate and added style for paginate, fixed game loading

--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -1,6 +1,7 @@
 header {
   width: 100%;
   padding: 1rem 0;
+  margin-bottom: 4rem;
   box-shadow: 2px 2px 9px 7px rgba(37, 37, 37, 0.753);
   background-color: rgba(37, 37, 37, 0.753);
 
