--- a/client/src/pages/main.scss
+++ b/client/src/pages/main.scss
@@ -17,9 +17,6 @@
       justify-content: space-between;
       align-items: flex-end;
     }
-    .active_nav-game {
-      background-color: red;
-    }
 
     span {
       width: 3rem;
@@ -118,35 +115,28 @@
     letter-spacing: 0.25rem;
     text-transform: uppercase;
     text-align: center;
-    
-    background-color: rgba(65, 65, 65, 0.562)
+
+    background-color: rgba(65, 65, 65, 0.562);
   }
 
+  a {
+    display: flex;
+    justify-content: center;
+    padding: 1rem 0;
 
-    a{
-      display: flex;
-      justify-content: center;
-      padding: 1rem 0;
-
-      &:hover{
-        background-color: rgb(65, 65, 65)
-      }
-      span{
-        width: 100%;
-        height: 100%;
-        border-radius: 10px;
-        letter-spacing: 0.25rem;
-        text-transform: uppercase;
-        color: #e7e7e7;
-        text-align: center;
-
-
-      }
-      
-      
-
+    &:hover {
+      background-color: rgb(65, 65, 65);
     }
-
+    span {
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+      letter-spacing: 0.25rem;
+      text-transform: uppercase;
+      color: #e7e7e7;
+      text-align: center;
+    }
+  }
 
   .genres-container,
   .themes-container,
