--- a/client/src/pages/main.scss
+++ b/client/src/pages/main.scss
@@ -16,19 +16,22 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
-    }
-
-    span {
-      width: 3rem;
-      height: 0.5rem;
-      display: inline;
-      border-radius: 20px;
-      background-color: rgba(192, 192, 192, 0.6);
-      cursor: pointer;
-      &:hover {
-        background-color: rgb(192, 192, 192);
+      button {
+        width: 3rem;
+        height: 0.5rem;
+        display: inline;
+        border: none;
+        outline: none;
+        border-radius: 20px;
+        background-color: rgba(192, 192, 192, 0.6);
+        cursor: pointer;
+        &:hover {
+          background-color: rgb(192, 192, 192);
+        }
       }
     }
+
+
   }
   .small-screen {
     max-width: 30%;
