--- a/client/src/pages/games.scss
+++ b/client/src/pages/games.scss
@@ -1,6 +1,8 @@
 .games{
   ul{
     li{
+      width: 60%;
+      margin: 0 auto;
       display: flex;
       justify-content: space-between;
       align-items: center;
